fix(components): Section overflow fix

--- a/components/section/style.css
+++ b/components/section/style.css
@@ -12,7 +12,7 @@
   z-index: 1;
 }
 
-:host:not([watermark]) {
+:host([watermark]) {
   overflow: hidden;
 }
 
